--- a/src/sass/components/main-app.scss
+++ b/src/sass/components/main-app.scss
@@ -4,5 +4,6 @@
   height: 100vh;
   width: 100vw;
   position: relative;
-  background-color: $background
+  background-color: $background;
+  overflow-x: hidden;
 };
