--- a/src/sass/components/sidebar.scss
+++ b/src/sass/components/sidebar.scss
@@ -7,13 +7,15 @@
   position: fixed;
   top: 0;
   z-index: 3;
+  transition: .5s;
 
-  @media screen and (max-width: 1000px){
+
+  @media screen and (max-width: 1200px){
     width: 14rem;
     transition: .5s;
   };
 
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1000px) {
     transform: translate(-14rem);
   };
 
