working on create event

--- a/src/sass/global/common.scss
+++ b/src/sass/global/common.scss
@@ -30,3 +30,8 @@
   box-shadow: 0 0 10px 3px rgb(212, 212, 212);
   position: relative;
 };
+
+.btn-no-style{
+  border: none;
+  background-color: transparent;
+}
