--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,3 +1,5 @@
 @import './sidebar.scss';
 @import './main-app.scss';
 @import './topbar.scss';
+@import "./modal.scss";
+@import './create-event.scss';
