--- a/src/sass/pages/agenda.scss
+++ b/src/sass/pages/agenda.scss
@@ -20,9 +20,10 @@
     margin-bottom: 1rem;
 
     .accordion{
+
       h3{
         margin: 0;
-        font-weight: lighter
+        font-weight: 400;
       };
       .icon{
         font-size:30px;
