create event almost done

--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,5 +1,6 @@
 @import './sidebar.scss';
 @import './main-app.scss';
 @import './topbar.scss';
-@import "./modal.scss";
+@import './modal.scss';
 @import './create-event.scss';
+@import './button.scss'
