--- a/src/sass/global/common.scss
+++ b/src/sass/global/common.scss
@@ -34,4 +34,12 @@
 .btn-no-style{
   border: none;
   background-color: transparent;
-}
+};
+
+.input-form{
+  margin-bottom: 5px;
+};
+
+.full-width{
+  width: 100%;
+};
