--- a/src/sass/components/create-event.scss
+++ b/src/sass/components/create-event.scss
@@ -1,16 +1,74 @@
+@import "../global/colors.scss";
+
 .create-event{
+  width: 40vw;
   h3{
     font-weight: 500;
   };
 
   .create-event-form{
+    width: 90%;
+    margin:auto;
     display: flex;
     flex-direction: column;
+
+    .dates{
+      margin-bottom: 10px;
+  
+      .date-picker-div{
+        width: 100%;
+        display: flex;
+        margin-bottom: 5px;
+        
+        div{
+          width: 85%;
+          font-size: 14px !important;
+        };
+
+        .remove-icon{
+          font-size: 22px;
+          vertical-align: middle;
+          margin-top: 20px;
+          width: 16%
+        };
+      };
+
+      .adress-line{
+        .input-form{
+          width: 48%;
+
+          &:not(:first-child){
+            margin-left: 4%
+          }
+        };
+      };
+
+    };
+    .add-date{
+      font-size: 14px;
+      border: 1px dashed $primary ;
+      background-color: white;
+      color: rgb(71, 71, 71);
+      font-weight: 500;
+      padding: .5rem 0;
+      border-radius: 5px;
+      transition-duration: .5s;
+
+      &:hover{
+        color: $primary;
+        transition-duration: .5s;
+      };
+
+      svg{
+        vertical-align: middle;
+      };
+    };
   };
 
   .upload-picture{
     position: relative;
     padding-top: 3rem;
+    margin-bottom: 4rem;
 
     .inputfile {
       width: 0.1px;
