--- a/src/sass/components/topbar.scss
+++ b/src/sass/components/topbar.scss
@@ -7,6 +7,7 @@
   position: fixed;
   top: 0;
   box-shadow: 0 5px 5px rgb(212, 212, 212) ;
+  z-index: 3;
 
   .logo-div{
     width: 8rem;
@@ -36,6 +37,30 @@
   .profile{
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 40px;
+
+    .logout{
+      position: absolute;
+      top: 40px;
+      right: 0;
+      width: max-content;
+      padding: .5rem;
+      background-color: white;
+      border-radius: 5px;
+      box-shadow: 0 0 10px 3px rgb(212, 212, 212);
+      color: $secondary;
+      z-index: 5;
+      display: none;
+    };
+
+    .close-logout{
+      width: 100vw;
+      height: 100vh;
+      z-index: 4; 
+      position: fixed;
+      top: 0;
+      right: 0;
+      display: none
+    };
   };
 };
