--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -3,4 +3,5 @@
 @import './topbar.scss';
 @import './modal.scss';
 @import './create-event.scss';
-@import './button.scss'
+@import './button.scss';
+@import "./edit-event.scss";
