--- a/src/sass/components/create-event.scss
+++ b/src/sass/components/create-event.scss
@@ -1,12 +1,12 @@
 @import "../global/colors.scss";
 
-.create-event{
+.event-components{
   width: 40vw;
   h3{
     font-weight: 500;
   };
 
-  .create-event-form{
+  .event-form{
     width: 90%;
     margin:auto;
     display: flex;
@@ -18,7 +18,6 @@
       .date-picker-div{
         width: 100%;
         display: flex;
-        margin-bottom: 5px;
         
         div{
           width: 85%;
