--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -153,6 +153,8 @@
   border-radius: 10px;
   box-shadow: 4px 16px 18px -2px rgba(71, 71, 71, 0.4);
   max-width: 80%;
+  max-height: 80vh;
+  overflow: auto
 };
 
 #confirm-content{
