edit event ok front

--- a/src/sass/global/colors.scss
+++ b/src/sass/global/colors.scss
@@ -1,6 +1,9 @@
 $primary : #038FDD;
 $secondary: #003366;
 $dark-blue: #002447;
+$dark-grey: rgb(88, 88, 88);
+$light-grey: #d4d4d4;
+
 
 $background: #F5F5F5;
 
