--- a/src/sass/components/create-event.scss
+++ b/src/sass/components/create-event.scss
@@ -93,4 +93,20 @@
       };
     };
   };
+
+  .picture-link{
+    font-style: italic;
+    color: $dark-grey;
+  };
+
+  .delete-picture{
+    vertical-align: middle;
+    font-size: 20px;
+    margin-left: 20px;
+    transition: .5s;
+
+    &:hover{
+      color: $dark-grey;
+    }
+  }
 };
