--- a/src/sass/components/button.scss
+++ b/src/sass/components/button.scss
@@ -39,3 +39,55 @@
   };
 };
 
+.btn-red{
+  background-color: $red;
+  border: 1px solid $red;
+  color: white;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: .5s;
+
+  &:hover{
+    background-color: white;
+    color: $red;
+    transition-duration: .5s;
+  };
+};
+
+.btn-red-outlined{
+  background-color: white;
+  border: 1px solid $red;
+  color: $red;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: .5s;
+
+  &:hover{
+    background-color: $red;
+    color: white;
+    transition-duration: .5s;
+  };
+};
+
+.btn-grey{
+  background-color: rgb(155, 155, 155);
+  border: 1px solid rgb(155, 155, 155);
+  color: white;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition-duration: .5s;
+
+  &:hover{
+    background-color: white;
+    color: rgb(155, 155, 155);
+    transition-duration: .5s;
+  };
+};
+
+
