--- a/src/sass/components/sidebar.scss
+++ b/src/sass/components/sidebar.scss
@@ -25,6 +25,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+
+    .icon-menu-div{
+      position: absolute;
+      left: 20px;
+      
+      svg{
+        color: white;
+        font-size: 24px;
+        padding: .25rem;
+
+        &:hover{
+          background-color: rgba(255, 255, 255, 0.3)
+        }
+      };
+    }
 
     .logo-div{
       width: 100px;
