--- a/src/sass/components/form.scss
+++ b/src/sass/components/form.scss
@@ -1,3 +1,5 @@
+@import "../global/colors.scss";
+
 .input-form{
   margin-bottom: 10px !important;
 };
@@ -18,7 +20,7 @@
     .remove-icon{
       font-size: 22px;
       vertical-align: middle;
-      margin-top: 20px;
+      margin-top: 10px;
       width: 16%
     };
   };
@@ -91,6 +93,62 @@
   };
 };
 
+.upload-multiple-pictures{
+  position: relative;
+
+  .inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+  };
+
+  .label{
+    padding: .5rem 0rem;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    border: 1px rgb(214, 214, 214) dashed;
+    background-color: rgb(243, 243, 243);
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    font-size: 14px;
+    transition: .5s;
+
+    &:hover{
+      color: $dark-grey;
+    }
+
+    .plus-icon{
+      vertical-align: middle;
+      margin-right: 5px
+    };
+  };
+};
+
+.picture-names-list{
+  height: 150px;
+  overflow: auto;
+
+  li{
+    font-size: 14px !important;
+    position: relative;
+
+    svg{
+      position: absolute;
+      right: 0;
+    };
+
+    &:hover{
+      background-color: $background
+    };
+  };
+};
+
+
 .picture-link{
   font-style: italic;
   color: $dark-grey;
@@ -104,5 +162,5 @@
 
   &:hover{
     color: $dark-grey;
-  }
-}
+  };
+};
